spade-tests/src/snapshots/spade_tests__integration__const_generic_in_binding_spec_works.snap
---
source: spade-tests/src/integration.rs
---
fn sized_zero<#Size>() -> uint<Size> {
    0
}

fn test() {
    let x: uint<{1 + 2}> = sized_zero::<8>();
}


error: Expected type 8, got 3
  ┌─ testinput:6:18
  │
6 │     let x: uint<{1 + 2}> = sized_zero::<8>();
  │                  ^^^^^ Expected 8, got 3
